syntax = "proto3";
option java_multiple_files = true;
package br.ufu.sd.work;

message InsertRequest {
    int64 id = 1;
    string value = 2;
    string idClient = 3;
}

message InsertResponse {
    string response = 1;
}

service InsertService {
    rpc insert (InsertRequest) returns (InsertResponse);
}